vlib/v/checker/tests/match_range_mismatch_type_err.out
vlib/v/checker/tests/match_range_mismatch_type_err.vv:4:3: error: the range type and the match condition type should match
    2 |     x := '1'
    3 |     match x {
    4 |         `0`...`9` {
      |         ~~~~~~~~~
    5 |             println('0-9')
    6 |         }
Details: 
match condition type: string
          range type: rune
vlib/v/checker/tests/match_range_mismatch_type_err.vv:16:3: error: the range type and the match condition type should match
   14 |     x := 1
   15 |     match x {
   16 |         0...`9` {}
      |         ~~~~~~~
   17 |         else {}
   18 |     }
Details: 
match condition type: int
          range type: rune
